Added sample for prodcut and suppliers collection
